fix bug in header (z-index)

--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,7 @@ h1 {
   padding: 10px 25px 15px 25px;
   display: flex;
   justify-content: center;
+  z-index: 10;
 }
 
 nav {
